# template-godot

./: .editorconfig  .gitignore  GEMINI.md  README.md  TASKS.md  create_project.py  project.godot  pyproject.toml  {{CODENAME}}.csproj  {{CODENAME}}.sln
Assets/Scenes/: main.tscn
Mods/Core/: assets.json  mod.json
Mods/Core/Definitions/: README.md
Source/{{CODENAME}}/: Main.cs
Source/{{CODENAME}}/Core/: Game.cs  IInitStep.cs  InitializationContext.cs  PipelineRunner.cs
Source/{{CODENAME}}/Core/Steps/: AssetLoadingStep.cs  DefinitionProcessingStep.cs  LoadSettingsStep.cs  ModActivationStep.cs  ModDiscoveryStep.cs
Source/{{CODENAME}}/Data/: AssetFile.cs  AssetManager.cs  ResourceReference.cs  ResourceReferenceJsonConverter.cs  Setting.cs
Source/{{CODENAME}}/Errors/: {{CODENAME}}Exception.cs
