[tool.poetry]
name = "godot-project-generator"
version = "0.1.0"
description = "Script to generate Godot C# projects from a template."
authors = ["Olib"]

[tool.poetry.dependencies]
python = "^3.10"
questionary = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
